// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddToCart with custom children /> 1`] = `
<span>
  Add to basket
</span>
`;

exports[`<AddToCart with props /> 1`] = `
<button
  disabled={false}
  onClick={[Function]}
>
  Add to basket
</button>
`;

exports[`<AddToCart/> 1`] = `
<button
  disabled={true}
  onClick={[Function]}
>
  Add to cart
</button>
`;
